adding li to page

--- a/ASSIGNMENT2/simple-crud/src/app/user/pages/profile/profile.component.html
+++ b/ASSIGNMENT2/simple-crud/src/app/user/pages/profile/profile.component.html
@@ -1,2 +1,7 @@
 <h1>Profile Page</h1>
-<a routerLink="/form">Go to Form</a> 
+<a routerLink="/form">Go to Form</a>
+<li>
+    <a routerLink="/books">Go to Page BOOK</a> <br>
+    <a routerLink="/blogs">Go to page BLOG</a> <br>
+
+</li> 
